# clearml-darknet-py

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
clearml_darknet/: __init__.py  darknet.py  errors.py  utils.py
examples/: optimize_detector.py  train_classifier.py  train_detector.py
examples/data/: darknet19.cfg  yolov3-tiny.cfg
tests/: conftest.py  test_darknet.py  test_split_dataset.py
