[metadata]
name = clearml-darknet-py
version = attr: clearml_darknet.__version__
url = https://github.com/dkubatin/clearml-darknet-py
license = MIT
author = Denis Kubatin
author_email = kubatin.denis@gmail.com
description = The library reproduces the reproduction of neural networks on the Darknet framework in ClearML.
long_description = file: README.md
keywords = darknet, clearml, machine-learning, deep-learning, neural-network
platforms = any
classifiers =
    'Development Status :: 5 - Production/Stable'
    'Intended Audience :: Science/Research'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: MIT License'
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
    'Topic :: Software Development'
    'Topic :: Software Development :: Version Control'
    'Topic :: System :: Logging'
    'Topic :: System :: Monitoring'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'

[options]
packages = find:
package_dir = = .
include_package_data = True
python_requires = >= 3.6
install_requires =
    clearml == 1.4.1

[options.packages.find]
where = .
exclude =
    examples*

[tool:pytest]
testpaths = tests
filterwarnings = error
